# mpegeff

./: CMakeLists.txt  README.md
src/: codeccontext.hpp  exceptions.hpp  formatcontext.hpp  frame.hpp  main.cpp  packet.hpp  remux.hpp  utils.cpp  utils.hpp
src/algos/: remux.cpp  remux.hpp  transcode.cpp  transcode.hpp
src/types/: audiofifo.cpp  audiofifo.hpp  codeccontext.cpp  codeccontext.hpp  exceptions.hpp  formatcontext.cpp  formatcontext.hpp  frame.cpp  frame.hpp  packet.cpp  packet.hpp  stream.hpp  swrcontext.cpp  swrcontext.hpp
tests/: test_utils.cpp
